--- a/slr-renting/src/main/java/vista/PanelConfigUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelConfigUser.fxml
@@ -1,40 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AdminChoferControlador">
-   <children>
-      <TableView fx:id="tblChofer" layoutY="175.0" prefHeight="275.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
-        <columns>
-          <TableColumn fx:id="clmID" prefWidth="58.4000244140625" text="ID" />
-          <TableColumn fx:id="clmNombre" prefWidth="200.80001831054688" text="Nombre" />
-            <TableColumn fx:id="clmTlf" prefWidth="140.79998779296875" text="Teléfono" />
-            <TableColumn fx:id="clmDni" prefWidth="135.20001220703125" text="DNI" />
-            <TableColumn fx:id="clmDisp" prefWidth="104.800048828125" text="Disposicion" />
-        </columns>
-      </TableView>
+<AnchorPane id="fondo" fx:id="paneConfig" prefHeight="620.0" prefWidth="620.0"
+            style="-fx-background-color: black;"
+            xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controlador.PanelConfigUserControlador">
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="94.0"
-            strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Panel administracion de Chofers"
-            wrappingWidth="634.6878051757812">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Text>
-      <Button fx:id="btnVolver" layoutX="573.0" layoutY="22.0" mnemonicParsing="false" text="Volver" />
-      <ButtonBar layoutX="377.0" layoutY="141.0" prefHeight="34.0" prefWidth="261.0">
-        <buttons>
-          <Button fx:id="btnAñadir" minWidth="56.0" mnemonicParsing="false" prefHeight="14.0" text="Añadir" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar" />
-            <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar" />
-        </buttons>
-      </ButtonBar>
+   <children>
+
+      <Line endX="170.0" endY="49.0" layoutX="-2.0" layoutY="-1.0" startX="167.7" startY="583.0" stroke="#fcdb00"/>
+      <Line endX="170.0" endY="49.0" layoutX="259.0" startX="170.0" startY="581.0" stroke="#fad900"/>
+      <Line endX="-100.5" endY="341.5" layoutX="270.0" layoutY="-292.0" startX="158.5" startY="341.5" stroke="#fcdb00"/>
+
+      <ImageView fitHeight="66.0" fitWidth="98.0" layoutX="177.0" layoutY="60.0" preserveRatio="true">
+         <image>
+            <Image url="@logo.jpg"/>
+         </image>
+      </ImageView>
+
+      <Text fill="WHITE" layoutX="225.0" layoutY="140.0" text="Tu Perfil"/>
+      <Text fill="#c4c4c2" layoutX="190.0" layoutY="165.0" text="Modifica tus datos personales"/>
+
+      <Text fill="WHITE" layoutX="185.0" layoutY="195.0" text="Nombre Completo"/>
+      <TextField fx:id="txtNombre" layoutX="185.0" layoutY="205.0" prefWidth="222.0"
+                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+
+      <Text fill="WHITE" layoutX="185.0" layoutY="250.0" text="Email"/>
+      <TextField fx:id="txtCorreo" layoutX="185.0" layoutY="260.0" prefWidth="222.0"
+                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+
+      <Text fill="WHITE" layoutX="185.0" layoutY="305.0" text="NIF/NIE"/>
+      <TextField fx:id="txtNif" layoutX="185.0" layoutY="315.0" prefWidth="222.0"
+                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+
+      <Text fill="WHITE" layoutX="185.0" layoutY="360.0" text="Teléfono"/>
+      <TextField fx:id="txtTelefono" layoutX="185.0" layoutY="370.0" prefWidth="222.0"
+                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+
+      <Text fill="WHITE" layoutX="185.0" layoutY="415.0" text="Contraseña"/>
+      <PasswordField fx:id="txtPassword" layoutX="185.0" layoutY="425.0" prefWidth="222.0"
+                     style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+
+      <CheckBox fx:id="chkCarnet" text="Dispone de carnet de conducir"
+                textFill="WHITE"
+                layoutX="185.0" layoutY="465.0"
+                style="-fx-background-color: #2b2b2b; -fx-border-color: fcdb00;"/>
+
+      <Button fx:id="btnGuardar"
+              layoutX="205.0" layoutY="515.0"
+              prefWidth="186.0" prefHeight="32.0"
+              style="-fx-background-color: grey; -fx-border-color: fcdb00; -fx-text-fill: black;"
+              text="Guardar Cambios"/>
+
+      <Button fx:id="btnVolver"
+              layoutX="205.0" layoutY="560.0"
+              prefWidth="186.0" prefHeight="32.0"
+              style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-text-fill: white;"
+              text="Volver"/>
+
    </children>
+
 </AnchorPane>
