--- a/slr-renting/src/main/java/vista/PanelMainUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelMainUser.fxml
@@ -1,40 +1,195 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AdminChoferControlador">
-   <children>
-      <TableView fx:id="tblChofer" layoutY="175.0" prefHeight="275.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
-        <columns>
-          <TableColumn fx:id="clmID" prefWidth="58.4000244140625" text="ID" />
-          <TableColumn fx:id="clmNombre" prefWidth="200.80001831054688" text="Nombre" />
-            <TableColumn fx:id="clmTlf" prefWidth="140.79998779296875" text="Teléfono" />
-            <TableColumn fx:id="clmDni" prefWidth="135.20001220703125" text="DNI" />
-            <TableColumn fx:id="clmDisp" prefWidth="104.800048828125" text="Disposicion" />
-        </columns>
-      </TableView>
+<BorderPane fx:id="root"
+            xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controlador.PanelMainUserControlador"
+            prefWidth="1280.0" prefHeight="720.0"
+            style="-fx-background-color: black;">
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="94.0"
-            strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Panel administracion de Chofers"
-            wrappingWidth="634.6878051757812">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Text>
-      <Button fx:id="btnVolver" layoutX="573.0" layoutY="22.0" mnemonicParsing="false" text="Volver" />
-      <ButtonBar layoutX="377.0" layoutY="141.0" prefHeight="34.0" prefWidth="261.0">
-        <buttons>
-          <Button fx:id="btnAñadir" minWidth="56.0" mnemonicParsing="false" prefHeight="14.0" text="Añadir" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar" />
-            <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar" />
-        </buttons>
-      </ButtonBar>
-   </children>
-</AnchorPane>
+    <!-- NAVBAR SUPERIOR -->
+    <top>
+        <HBox spacing="24" alignment="CENTER_LEFT"
+              style="-fx-background-color: black;">
+            <padding>
+                <Insets top="16" bottom="16" left="32" right="32"/>
+            </padding>
+
+            <!-- Logo -->
+            <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                <image>
+                    <Image url="@logo.jpg"/>
+                </image>
+            </ImageView>
+
+            <StackPane HBox.hgrow="ALWAYS"/>
+
+            <!-- Menú de usuario -->
+            <MenuButton fx:id="menuUsuario"
+                        text="Usuario"
+                        style="-fx-background-radius: 20; -fx-background-color: transparent; -fx-border-radius: 20; -fx-border-color: #ffd666; -fx-border-width: 1.5; -fx-text-fill: #ffd666; -fx-font-size: 13px; -fx-padding: 8 18 8 18;">
+                <items>
+                    <MenuItem fx:id="itemConfig" text="Config"/>
+                    <MenuItem fx:id="itemMisReservas" text="Mis Reservas"/>
+                    <MenuItem fx:id="itemLogout" text="Logout"/>
+                </items>
+            </MenuButton>
+        </HBox>
+    </top>
+
+    <!-- CONTENIDO -->
+    <center>
+        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED"
+                    style="-fx-background-color: transparent;">
+            <content>
+                <VBox spacing="32" style="-fx-background-color: black;">
+                    <padding>
+                        <Insets top="24" bottom="32" left="32" right="32"/>
+                    </padding>
+
+                    <!-- CARD DESTACADO -->
+                    <HBox spacing="24"
+                          style="-fx-background-color: #121212; -fx-background-radius: 18; -fx-border-radius: 18; -fx-border-color: #3b3320;">
+                        <padding>
+                            <Insets top="24" bottom="24" left="24" right="24"/>
+                        </padding>
+
+                        <VBox spacing="18" prefWidth="500">
+                            <Label text="Nuevo"
+                                   style="-fx-background-color: #ffd666; -fx-background-radius: 30; -fx-text-fill: #111111; -fx-font-size: 11px; -fx-font-weight: bold; -fx-padding: 4 12 4 12;"/>
+
+                            <Label fx:id="lblModeloDestacado"
+                                   text="Modelo"
+                                   style="-fx-text-fill: #f5f5f5; -fx-font-size: 24px; -fx-font-weight: bold;"/>
+
+                            <Label fx:id="lblDescripcionDestacado"
+                                   text="Descripción del coche"
+                                   wrapText="true"
+                                   style="-fx-text-fill: #b5b5b5; -fx-font-size: 13px;"/>
+
+                            <GridPane hgap="18" vgap="18">
+                                <columnConstraints>
+                                    <ColumnConstraints percentWidth="50"/>
+                                    <ColumnConstraints percentWidth="50"/>
+                                </columnConstraints>
+                                <rowConstraints>
+                                    <RowConstraints minHeight="60"/>
+                                    <RowConstraints minHeight="60"/>
+                                </rowConstraints>
+
+                                <!-- Potencia -->
+                                <StackPane
+                                        style="-fx-background-color: #050608; -fx-background-radius: 16; -fx-border-radius: 16; -fx-border-color: #3b3320;">
+                                    <padding>
+                                        <Insets top="12" bottom="12" left="16" right="16"/>
+                                    </padding>
+                                    <VBox spacing="6">
+                                        <Label text="Potencia"
+                                               style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;"/>
+                                        <Label fx:id="lblPotenciaDestacado"
+                                               text="0 CV"
+                                               style="-fx-text-fill: #f5f5f5; -fx-font-size: 16px; -fx-font-weight: bold;"/>
+                                    </VBox>
+                                </StackPane>
+
+                                <!-- Aceleración -->
+                                <StackPane GridPane.columnIndex="1"
+                                           style="-fx-background-color: #050608; -fx-background-radius: 16; -fx-border-radius: 16; -fx-border-color: #3b3320;">
+                                    <padding>
+                                        <Insets top="12" bottom="12" left="16" right="16"/>
+                                    </padding>
+                                    <VBox spacing="6">
+                                        <Label text="0-100 km/h"
+                                               style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;"/>
+                                        <Label fx:id="lblAceleracionDestacado"
+                                               text="0.0 s"
+                                               style="-fx-text-fill: #f5f5f5; -fx-font-size: 16px; -fx-font-weight: bold;"/>
+                                    </VBox>
+                                </StackPane>
+
+                                <!-- Velocidad -->
+                                <StackPane GridPane.rowIndex="1"
+                                           style="-fx-background-color: #050608; -fx-background-radius: 16; -fx-border-radius: 16; -fx-border-color: #3b3320;">
+                                    <padding>
+                                        <Insets top="12" bottom="12" left="16" right="16"/>
+                                    </padding>
+                                    <VBox spacing="6">
+                                        <Label text="Velocidad Máx"
+                                               style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;"/>
+                                        <Label fx:id="lblVelocidadDestacado"
+                                               text="000 km/h"
+                                               style="-fx-text-fill: #f5f5f5; -fx-font-size: 16px; -fx-font-weight: bold;"/>
+                                    </VBox>
+                                </StackPane>
+
+                                <!-- Transmisión -->
+                                <StackPane GridPane.columnIndex="1" GridPane.rowIndex="1"
+                                           style="-fx-background-color: #050608; -fx-background-radius: 16; -fx-border-radius: 16; -fx-border-color: #3b3320;">
+                                    <padding>
+                                        <Insets top="12" bottom="12" left="16" right="16"/>
+                                    </padding>
+                                    <VBox spacing="6">
+                                        <Label text="Transmisión"
+                                               style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;"/>
+                                        <Label fx:id="lblTransmisionDestacado"
+                                               text="Desconocido"
+                                               style="-fx-text-fill: #f5f5f5; -fx-font-size: 16px; -fx-font-weight: bold;"/>
+                                    </VBox>
+                                </StackPane>
+                            </GridPane>
+
+                            <HBox spacing="16" alignment="CENTER_LEFT">
+                                <VBox spacing="4">
+                                    <Label text="Desde"
+                                           style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;"/>
+                                    <Label fx:id="lblPrecioDestacado"
+                                           text="0€/mes"
+                                           style="-fx-text-fill: #ffd666; -fx-font-size: 16px; -fx-font-weight: bold;"/>
+                                </VBox>
+
+                                <StackPane HBox.hgrow="ALWAYS"/>
+
+                                <Button fx:id="btnVerDetallesDestacado"
+                                        text="Ver Detalles"
+                                        style="-fx-background-radius: 18; -fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-size: 13px; -fx-font-weight: bold; -fx-padding: 8 22 8 22;"/>
+                            </HBox>
+                        </VBox>
+
+                        <!-- Imagen del coche destacado -->
+                        <StackPane prefWidth="420" prefHeight="260"
+                                   style="-fx-background-color: #050608; -fx-background-radius: 18;">
+                            <ImageView fx:id="imgDestacado"
+                                       fitWidth="420" fitHeight="260"
+                                       preserveRatio="true"
+                                       style="-fx-background-radius: 18;"/>
+                        </StackPane>
+                    </HBox>
+
+                    <!-- TÍTULO COLECCIÓN -->
+                    <Label text="Colección"
+                           style="-fx-text-fill: #ffd666; -fx-font-size: 20px; -fx-font-weight: bold;"/>
+
+                    <!-- CONTENEDOR DE COCHES DINÁMICO -->
+                    <HBox fx:id="contenedorCoches" spacing="24"/>
+                </VBox>
+            </content>
+        </ScrollPane>
+    </center>
+
+</BorderPane>
